<resources>
    <string name="app_name">HekNews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Screen -->
    <string name="news_name">News Name</string>
    <string name="news_image">News image</string>
    <string name="fake_date" translatable="false">2022-08-18T10:19:00Z</string>
    <string name="fake_author" translatable="false">Kathleen Magramo, CNN</string>
    <string name="fake_news_title" translatable="false">Dow Jones Futures: Market Rally Retreats, BBBY Stock Dives On This; Time To Bite Into Apple Stock? | Investor\'s Business Daily - Investor\'s Business Daily</string>
    <string name="fake_category" translatable="false">entertainment</string>
    <string name="example_author">fanatik</string>
    <string name="title_home">Home</string>
    <string name="log_out_question">Are you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logged_out_successfully">Logged Out Successfully!</string>
    <string name="removed_from_favorite">News removed from favorite!</string>
    <string name="added_to_favorite">Added to favorite!</string>
    <string name="welcome">Welcome!</string>

    <!-- Registration Screens -->
    <string name="fill_all_fields">Please fill out all the fields!</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="register_now">Register Now</string>
    <string name="log_out">Log Out</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="account_created">Account created successfully!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>

    <!-- Favorite Screen -->
    <string name="title_favorite">Favorite</string>
    <string name="details_content_description">Favorite icon</string>
    <string name="you_have_no_favorite_news">You didn\'t save any news</string>
    <string name="logo">logo</string>
    <string name="click_to_see_more">Click to go to the news website</string>
    <string name="remember_me">Remember Me</string>
    <string name="read_later">Read Later</string>
    <string name="no_data">No Data</string>
    <string name="all_data_in_the_app_comes_from_newsapi">All data in the app comes from newsapi.org</string>

</resources>